--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,10 +38,10 @@ body {
         background-color: #e2e0e0;
         color: #292929;
         font-weight: bold;
-        font-size: 12px;
+        font-size: 10px;
         text-transform: uppercase;
         cursor: pointer;
-        transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out, top 0.5s ease-in-out, left 0.5s ease-in-out;
         order: 5;
         
         $cell-size: 80px;
@@ -100,7 +100,7 @@ body {
         gap: 5px;
         font-size: 16px;
         text-transform: uppercase;
-        transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out 0.5s;
         color: #FFF;
         ul{
             list-style: none;
@@ -112,6 +112,12 @@ body {
             font-weight: bold;
         }
     }
+}
+#open-modal{
+    padding: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: none;
 }
 #submit{
     width: 100%;
@@ -143,15 +149,54 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #292929;
+    h2{
+        text-transform: uppercase;
+        font-size: 14px;
+    }
+    h3{
+        text-transform: uppercase;
+        font-size: 10px;
+    }
     #message{
         background-color:#FFF;
-        max-width: 300px;
+        width: 335px;
+        height: 335px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
         color: #000;
         padding: 20px;
         box-shadow: 0px 0px 20px -5px rgba(255, 255, 255, 0.6);
+        position: relative;
+        #close-modal{
+            position: absolute;
+            top: 2px;
+            right: 8px;
+            width: 11px;
+            height: 11px;
+            cursor: pointer;
+            &:after, &:before{
+                content: "";
+                position: absolute;
+                width: 2px;
+                height: 12px;
+                background-color: rgb(177, 19, 19);
+                left: 6px;
+                top: 6px;
+                transform: rotate(45deg);
+            }
+            &:before{
+                transform: rotate(-45deg);
+            }
+        }
     }
     &.active{
-    inset: 0;
+        inset: 0;
+    }
+    a svg{
+        width: 30px;
     }
 }
 
