--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,11 +3,16 @@
 }
 html{
     font-family: "Roboto", sans-serif;
+    height: 100%;
 }
 body {
-  background-color: #FFFFFF;
-  text-align: center;
-  margin: 0px;
+    background-color: #FFFFFF;
+    text-align: center;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 .container{
     width: 335px;
@@ -139,7 +144,7 @@ body {
     }
 }
 
-#modal{
+#modal, #instructions{
     position: absolute;
     top: 0;
     left: -100%;
@@ -158,7 +163,7 @@ body {
         text-transform: uppercase;
         font-size: 10px;
     }
-    #message{
+    .message{
         background-color:#FFF;
         width: 335px;
         display: flex;
@@ -169,7 +174,7 @@ body {
         padding: 20px;
         box-shadow: 0px 0px 20px -5px rgba(255, 255, 255, 0.6);
         position: relative;
-        #close-modal{
+        .close-modal{
             position: absolute;
             top: 2px;
             right: 8px;
@@ -231,6 +236,9 @@ body {
     }
     a svg{
         width: 30px;
+    }
+    p{
+        text-align: left;
     }
 }
 
