height adapt on small devices

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -303,6 +303,6 @@ body {
 
 @media screen and (max-height: 700px){
     body {
-        justify-content: flex-start;
+        align-items: flex-start;
     }
 }
