--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -173,7 +173,7 @@ body {
         top: 50%;
         left: 50%;
         max-height: 100%;
-        overflow: scroll;
+        overflow: auto;
         transform: translate(-50%, -50%);
         color: #000;
         padding: 20px;
